# fabric-jumpstart

./: .gitignore  .nxignore  CONTRIBUTING.md  JUMPSTART_SETUP.md  MANIFEST.in  README.md  STANDARDS.md  TODO.md  UI.md  dev-setup.ps1  fabric_cicd-0.1.33-py3-none-any.whl  fabric_cicd-0.1.34-py3-none-any.whl  nx.json  package-lock.json  package.json  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  jumpstart.yml
.github/agent.md/: README.md
.github/workflows/: deploy.yaml  gci-full.yaml  gci-python-matrix.yml  tests.yml
contrib/: README.md  bootstrap-all.sh  bootstrap-ci.sh  bootstrap-dev-env.ps1  bootstrap-dev-env.sh  bootstrap-python.ps1  bootstrap-python.sh  bootstrap-web.sh
dev/: dev.ipynb  dev_example.ipynb  test.ipynb
fabric_jumpstart/: __init__.py  core.py  utils.py
fabric_jumpstart.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fabric_jumpstart/demo_artifacts/: __init__.py
fabric_jumpstart/demo_artifacts/spark_rti_monitoring/: __init__.py  parameter.yml
fabric_jumpstart/demo_artifacts/spark_rti_monitoring/Spark Monitoring Recommedations.Notebook/: fabric-spark-monitoring-setup.ipynb
fabric_jumpstart/demo_artifacts/spark_rti_monitoring/Spark Monitoring.KQLQueryset/: RealTimeQueryset.json
fabric_jumpstart/demos/: __init__.py  spark_rti_monitoring.py
fabric_jumpstart/yml_templates/: spark_rti_monitoring.yml
src/fabric_jumpstart/: .gitignore  CONTRIBUTING.md  README.md  STANDARDS.md  __init__.py  bootstrap-python.ps1  conflict_resolver.py  constants.py  core.py  hatch_build.py  installer.py  jumpstart.css  jumpstart.js  project.json  pyproject.toml  registry.py  registry.yml  response.css  response.py  schemas.py  settings.json  ui.py  utils.py
src/fabric_jumpstart/dev/: dev_example.ipynb  test_example.ipynb
src/fabric_jumpstart/fabric_jumpstart/: __init__.py  constants.py  core.py  installer.py  logger.py  registry.py  telemetry.py  utils.py  workspace_manager.py
src/fabric_jumpstart/fabric_jumpstart/ui/: catalog.js  catalog.py  install_status.py  ui.css
src/fabric_jumpstart/tests/: schemas.py  test_credential.py  test_installer.py  test_registry.py  test_telemetry.py  test_upload.py
src/fabric_jumpstart/ui/: __init__.py  catalog.js  catalog.py  conflict_resolver.py  formatting.py  install_status.py  ui.css
src/fabric_jumpstart_web/: .env.development  .env.production  .gitignore  CONTRIBUTING.md  README.md  jest.config.js  next.config.mjs  package.json  project.json  start-dev-server.sh  tsconfig.json
src/fabric_jumpstart_web/__tests__/: content-contract.test.ts  contract.test.ts  filterUrlSync.test.ts
src/fabric_jumpstart_web/scripts/: deploy.sh  generate-content.ts
tests/: schemas.py  test_instance_name.py  test_registry.py
tools/: render-diagrams.ts
tools/scripts/: fail-on-untracked-files.ts
(+223 files in other folders)
