[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fabric-jumpstart"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [ # temporary until fabric_cicd-0.1.34 is released for SJD / Fabric Auth support
    "fabric-cicd>=0.1.34",
    "pyyaml>=6.0.3",
]

[tool.hatch.build]
# Include every file under src/fabric_jumpstart (not just .py) in the wheel
include = ["src/fabric_jumpstart/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/fabric_jumpstart"]


[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "make>=0.1.6.post2",
    "ipython>=8.20",
]
lint = [
    "ruff>=0.14.10",
    "ty==0.0.14",
]
test = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
]

[tool.ruff]
src = ["src"]
# Ignore packaged jumpstart payloads (e.g., demo notebooks) to keep lint focused on library code.
extend-exclude = ["src/fabric_jumpstart/jumpstarts/**"]

[tool.ty.src]
# Skip type checking for test helpers that rely on dynamic imports/aliases.
exclude = [
    "tests/test_instance_name.py", 
    "src/fabric_jumpstart/jumpstarts/**",
    "dev/**"
]
